Bug 1266124 - [css-grid] Update the 'grid' shorthand syntax to the latest spec.  r=dholbert